# Inverted-Double-Pendulum

./: .gitignore  CMakeLists.txt  DoublePendulum.slx  IDPControl.cc  IDPControl.cpp  IDPControl.h  IDPControlOld2.cpp  IDPDriver.cc  IDPDriver.cpp  IDPDriver.h  README.md  Test.m  index.html  main.cpp  mainWebsoc.cpp  main_test.cpp  robotpkg.conf  server.py  trajDraft.m  trajDraft2.asv  trajDraft2.m  trajRecord.cpp  trajectory_data.csv
Misc/: RT Kernel Comparison.xlsx
control/: IDPControl.cpp  IDPControl.h  IDPControlOld.cpp  IDPControlOld2.cpp  IDPControlPosition.cpp  IDPpidController.cpp  csvReader.cpp  rnea.cpp  test_position1.csv  test_position2.csv  torqueError.cpp
control/csv/: SetPos45Degrees.csv
driver/: bandwidthTest.cpp  bandwidthTestRT.cpp  cactusTest.cpp  driver.cpp  manualTorque.cpp  rtDriver.cpp  trajRecord.cpp
sim/: AntiGravity.slx  DoublePendulum.slx  Frictionless.slx  Inverted_Double_Pendulum.slx  NEW_traj.mat  NEW_traj_2.mat  TEST_Torque_Input.slx  TEST_data.mat  TEST_data_2.mat  TEST_signal.slx  mjbotArm2.STL  placeholder.txt
sim/STL Files/: mjbotArm1.STL  mjbotArm2.STL
trajGen/: Animation_of_trajGen.asv  Animation_of_trajGen.m  Hand_Desgined_traj_gen_draft1.csv  Hand_Designed_Data.mat  RTTestTraj.csv  TEST_AGAIN.m  TEST_DLO.csv  VERY_TESTY.csv  double_pendulum_eqns.m  double_pendulum_ode.m  highlightCSV.m  highlighted_trajectory_data.xlsx  inverted_damped_cosine_wave.csv  motor_data.csv  traj10.m  traj4.asv  traj4.m  traj5.asv  traj5.m  traj6.asv  traj6.m  traj7.m  traj8.m  traj9.asv  traj9.m  trajDraft.m  trajDraft2.m  trajDraft3.m  trajGen.asv  trajGen.m  trajTool.asv  trajTool.m  trajectory_data.csv  trajectory_data_01.csv  trajectory_data_02.csv  trajectory_data_03.csv  trajectory_data_04.csv  trajectory_data_05.csv  trajectory_data_06.csv  trajectory_data_07.csv  (+18 more)
trajGen/DLO/: DLO.m  DLO2.m  DLO_Trajtool.m  Test_1.m  Trajectory.csv  VERY_TESTY.asv  VERY_TESTY.csv  VERY_TESTY.m  inverted_damped_cosine_wave.csv  trajectory_data_09.csv
trajGen/TrajGenGraphs/: inverted_damped_cosine_wave.csv  position_traj_data_05.fig  trajectory_data_00.fig  trajectory_data_01.fig  trajectory_data_02.fig  trajectory_data_03.fig  trajectory_data_04.fig  trajectory_data_05.csv  trajectory_data_05.fig  trajectory_data_06.csv  trajectory_data_09.fig
trajGen/rejectedTrajectory/: Animation_of_trajGen.m  trajDraft2.m  trajDraft3.m  trajGen.m  trajectory_data_08.csv  trajectory_data_1.csv  trajectory_data_2.csv  trajectory_data_3.csv  trajectory_data_4.csv  trajectory_data_8.csv
